clean up the gradle files