@@ -1,27 +1,78 @@
 plugins {
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'io.spring.dependency-management' version '1.1.7' apply false
+
 }
 
-allprojects {
+subprojects {
     group = 'HiServer'
     version = '0.0.1-SNAPSHOT'
+
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
 
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_17
 
     repositories {
         mavenCentral()
     }
 
-    tasks.withType(JavaCompile) {
-        options.encoding = 'UTF-8'
-        options.compilerArgs += ['--enable-preview']
+    ext {
+        springCloudVersion = "2024.0.1"
+        grpcVersion = '1.62.2'
+        grpcSpringBootStarterVersion = '3.0.0.RELEASE'
+        protobufVersion = '3.25.1'
+        mapstructVersion = '1.5.3.Final'
+        springdocOpenapiVersion = '2.3.0'
+        lombokVersion = '1.18.30'
+        annotationApiVersion = '1.3.2'
+        h2Version = '2.2.224'
     }
 
-    test {
+    dependencies {
+        compileOnly "org.projectlombok:lombok:${lombokVersion}"
+        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        }
+    }
+
+    plugins.withId('org.springframework.boot') {
+        apply plugin: 'java' // Ensure java plugin is applied first if needed
+
+        // Configurations specific to Spring Boot applications
+        bootJar {
+            enabled = true // Default for boot apps
+        }
+        bootRun {
+            enabled = true // Default for boot apps
+        }
+
+        // Default bootJar/bootRun to disabled, enable explicitly in service build.gradle files
+        bootJar { enabled = false }
+        bootRun { enabled = false }
+    }
+
+
+    tasks.named('test') {
         useJUnitPlatform()
-        jvmArgs += '--enable-preview'
+    }
+
+}
+
+// Configuration for Protobuf plugin (apply only where needed)
+subprojects {
+    plugins.withId('com.google.protobuf') {
+        protobuf {
+            protoc { artifact = "com.google.protobuf:protoc:${protobufVersion}" }
+            plugins { grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" } }
+            generateProtoTasks {
+                all().each { task -> task.plugins { grpc {} } }
+            }
+        }
     }
 }
